...
      context: context,
      isShowBg: true,
      offset: const Offset(50.0, 150.0),
      anchor: hint,
      child: Semantics(
        label: '弹出引导页',
        hint: '向左滑动可删除列表，点击可关闭',
        button: true,
        child: Container(
          key: const Key('hint'),
          width: 200.0,
          height: 147.0,
          decoration: BoxDecoration(
...
            Text(
              _sizeName,
              style: TextStyles.textBold24,
            ),
            Gaps.vGap8,
            RichText(
              key: const Key('name_edit'),
              text: TextSpan(
                text: '先对名称进行',
                style: Theme.of(context).textTheme.titleSmall?.copyWith(fontSize: Dimens.font_sp14),
                children: <TextSpan>[
                  TextSpan(
                    text: '编辑',
...
